--- a/styles/component-styles/bio.css
+++ b/styles/component-styles/bio.css
@@ -10,21 +10,9 @@
 .bio .content-container {
   padding: 0 1rem;
   flex: 1;
-  display: -webkit-box;
-  -webkit-line-clamp: 10;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  transition: height 3s;
-}
- 
-
- 
-.bio .content-container:hover  {
-  display: block;
 }
 
-article h2 {
+.bio .content-container h2 {
   text-align: center;
 }
 
@@ -33,3 +21,5 @@ img {
   height: 100%;
   object-fit: cover;
 }
+
+ 
