--- a/styles/component-styles/bio.css
+++ b/styles/component-styles/bio.css
@@ -5,12 +5,44 @@
 }
 
 .bio .picture-container {
+  height: 50%;
+  transition: all 1s;
   flex: 1;
+  cursor: pointer;
 }
 
 .bio .content-container {
+  transition: height 1s;
+  height: 50%;
   padding: 0 1rem;
   flex: 1;
+  cursor: pointer;
+}
+
+.bio .content-container {
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
+.bio .picture-container:active,
+.bio .content-container:active {
+  position: fixed;
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--secondary-color);
+}
+
+.bio .picture-container:active {
+  padding: 0;
+}
+
+.bio .content-containerr:active  {
+  padding: 2rem;
+  display: block;
 }
 
 img {
