--- a/styles/component-styles/bio.css
+++ b/styles/component-styles/bio.css
@@ -11,37 +11,64 @@
   cursor: pointer;
 }
 
-.bio .content-container {
+.bio label {
   transition: height 1s;
   height: 50%;
-  padding: 0 1rem;
   flex: 1;
   cursor: pointer;
 }
 
-.bio .content-container {
-  display: -webkit-box;
-  -webkit-line-clamp: 10;
-  -webkit-box-orient: vertical;  
-  overflow: hidden;
+.bio label:hover img {
+  transition: scale 1s;
 }
 
-.bio .picture-container:active,
-.bio .content-container:active {
+.bio label:hover img {
+  scale: 1.1;
+}
+
+.bio label img {
+  object-fit: contain;
+}
+
+.bio label .personal-info {
+  display: none;
+  color: var(--primary-color);
+  padding: 0 1rem;
+}
+
+.bio label .personal-info a {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.bio label .personal-info a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.bio input:nth-of-type(1):checked ~ label .personal-info {
+  display: block;
+}
+
+.bio input:nth-of-type(1):checked ~ label:nth-of-type(1),
+.bio input:nth-of-type(2):checked ~ label:nth-of-type(2) {
   position: fixed;
   height: 100%;
-  top: 10rem;
+  top: 6rem;
   left: 0;
   width: 100%;
   background-color: var(--secondary-color);
   z-index: 2;
 }
 
-.bio .picture-container:active {
+.bio input:nth-of-type(1):checked ~ label:nth-of-type(1) {
   padding: 0;
 }
 
-.bio .content-containerr:active  {
-  padding: 2rem;
-  display: block;
+.bio .content-container {
+  padding: 0 1rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
