--- a/styles/component-styles/bio.css
+++ b/styles/component-styles/bio.css
@@ -50,6 +50,16 @@
   display: block;
 }
 
+.bio input:checked ~ label .toggle-content  {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+}
+
+.bio input:checked ~ label .toggle-content::after {
+  content: "Close!";
+}
+
 .bio input:nth-of-type(1):checked ~ label:nth-of-type(1),
 .bio input:nth-of-type(2):checked ~ label:nth-of-type(2) {
   position: fixed;
