--- a/styles/component-styles/bio.css
+++ b/styles/component-styles/bio.css
@@ -21,6 +21,7 @@
 
 .bio label img {
   object-fit: contain;
+  transition: scale 1s;
 }
 
 .bio label .personal-info {
@@ -53,7 +54,7 @@
 .bio input:nth-of-type(2):checked ~ label:nth-of-type(2) {
   position: fixed;
   height: 100%;
-  top: 6rem;
+  top: 0;
   left: 0;
   width: 100%;
   background-color: var(--secondary-color);
@@ -73,10 +74,6 @@
 }
 
 @media (any-pointer:  fine) {
-  .bio label:hover img {
-    transition: scale 1s;
-  }
-  
   .bio label:hover img {
     scale: 1.1;
   }
