--- a/styles/component-styles/bio.css
+++ b/styles/component-styles/bio.css
@@ -2,6 +2,11 @@
   display: flex;
   gap: 1rem;
   flex-direction: column;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .bio .picture-container {
@@ -17,6 +22,10 @@
   height: 50%;
   flex: 1;
   cursor: pointer;
+
+  @media (min-width: 768px) {
+    width: calc(40% - 1rem);
+  }
 }
 
 .bio label img {
