--- a/styles/component-styles/bio.css
+++ b/styles/component-styles/bio.css
@@ -2,32 +2,45 @@
   display: flex;
   gap: 1rem;
   flex-direction: column;
+
+  /* TABLET */
+  @media (min-width: 768px) {
+    padding: 0 1rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .bio .picture-container {
   height: 50%;
-  transition: all 1s;
   flex: 1;
-  cursor: pointer;
   overflow: hidden;
+  cursor: pointer;
+  transition: all 1s;
 }
 
 .bio label {
-  transition: height 1s;
   height: 50%;
   flex: 1;
   cursor: pointer;
+  transition: height 1s;
+
+  /* TABLET */
+  @media (min-width: 768px) {
+    width: calc(40% - 1rem);
+  }
 }
 
 .bio label img {
+  max-height: 50vh;
   object-fit: contain;
   transition: scale 1s;
 }
 
 .bio label .personal-info {
+  padding: 0 1rem;
   display: none;
   color: var(--primary-color);
-  padding: 0 1rem;
 }
 
 .bio label .personal-info a {
@@ -37,10 +50,19 @@
 
 
 .bio input:nth-of-type(1):checked ~ label .personal-info {
+  width: 100%;
   display: block;
+  position: absolute;
 }
 
 .bio input:checked ~ label .toggle-content  {
+  display: block;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.bio input:checked ~ label .toggle-content:hover  {
   background-color: var(--primary-color);
   color: var(--secondary-color);
   border: 1px solid var(--secondary-color);
@@ -52,11 +74,11 @@
 
 .bio input:nth-of-type(1):checked ~ label:nth-of-type(1),
 .bio input:nth-of-type(2):checked ~ label:nth-of-type(2) {
-  position: fixed;
+  width: 100%;
   height: 100%;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
   background-color: var(--secondary-color);
   z-index: 2;
 }
@@ -66,13 +88,14 @@
 }
 
 .bio .content-container {
-  padding: 0 1rem;
   display: -webkit-box;
+  padding: 0 1rem;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
+/* MOUSE */
 @media (any-pointer:  fine) {
   .bio label:hover img {
     scale: 1.1;
